[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Faces/Face.png" type="Texture" id=1]
[ext_resource path="res://Player/GUI.gd" type="Script" id=2]
[ext_resource path="res://GUI/MomcakeBold-WyonA.otf" type="DynamicFontData" id=3]
[ext_resource path="res://GUI/Icons/buttonA.png" type="Texture" id=4]
[ext_resource path="res://GUI/Icons/exitLeft.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.498039 )
corner_radius_bottom_right = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.498039 )
corner_radius_bottom_left = 50
corner_detail = 20

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.498039 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxLine" id=8]
color = Color( 1, 1, 1, 1 )
thickness = 3

[sub_resource type="StyleBoxEmpty" id=9]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 276.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Panel"]
margin_left = 923.0
margin_right = 1024.0
margin_bottom = 100.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
text = "  Press        to Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel/Label"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 230, 40 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 15
custom_constants/margin_left = 70
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 70.0
margin_top = 15.0
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 20

[node name="Player1" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 954.0
margin_bottom = 35.0
text = "NOT Ready"

[node name="PlayerIcon" type="Sprite" parent="MarginContainer/VBoxContainer/Player1"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -29.2599, 18.3393 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Player2" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 55.0
margin_right = 954.0
margin_bottom = 90.0
text = "Ready"

[node name="PlayerIcon" type="Sprite" parent="MarginContainer/VBoxContainer/Player2"]
modulate = Color( 0, 1, 0.4, 1 )
position = Vector2( -29.2599, 18.3393 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Player3" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 110.0
margin_right = 954.0
margin_bottom = 145.0
text = "Ready"

[node name="PlayerIcon" type="Sprite" parent="MarginContainer/VBoxContainer/Player3"]
modulate = Color( 0.783333, 0, 1, 1 )
position = Vector2( -29.2599, 18.3393 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Player4" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 165.0
margin_right = 954.0
margin_bottom = 200.0
text = "Ready"

[node name="PlayerIcon" type="Sprite" parent="MarginContainer/VBoxContainer/Player4"]
modulate = Color( 0.733333, 1, 0, 1 )
position = Vector2( -29.2599, 18.3393 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="End Screen" type="CenterContainer" parent="."]
anchor_bottom = 1.0
margin_top = 115.0
margin_right = 1024.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="End Screen"]
margin_left = 512.0
margin_top = 242.0
margin_right = 512.0
margin_bottom = 242.0
custom_constants/separation = 79
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="VBoxContainer" parent="End Screen/HBoxContainer"]
visible = false
margin_right = 177.0
margin_bottom = 343.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="End Screen/HBoxContainer/Player1"]
margin_right = 177.0
alignment = 1

[node name="Control" type="Control" parent="End Screen/HBoxContainer/Player1/HBoxContainer"]
margin_left = 88.0
margin_right = 88.0

[node name="Sprite" type="Sprite" parent="End Screen/HBoxContainer/Player1/HBoxContainer/Control"]
self_modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, 115 )

[node name="Panel" type="Panel" parent="End Screen/HBoxContainer/Player1/HBoxContainer/Control/Sprite"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -105.0
margin_top = 40.0
margin_right = 26.0
margin_bottom = 298.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Winner" type="Label" parent="End Screen/HBoxContainer/Player1"]
margin_top = 4.0
margin_right = 177.0
margin_bottom = 39.0
text = "Winner!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="End Screen/HBoxContainer/Player1"]
margin_top = 43.0
margin_right = 177.0
margin_bottom = 183.0
custom_styles/separator = SubResource( 7 )
custom_constants/separation = 140

[node name="Time" type="Label" parent="End Screen/HBoxContainer/Player1"]
margin_top = 187.0
margin_right = 177.0
margin_bottom = 222.0
text = "0:06:56"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="End Screen/HBoxContainer/Player1"]
margin_top = 226.0
margin_right = 177.0
margin_bottom = 228.0
custom_styles/separator = SubResource( 8 )
custom_constants/separation = 2

[node name="Jumps" type="Label" parent="End Screen/HBoxContainer/Player1"]
margin_top = 232.0
margin_right = 177.0
margin_bottom = 267.0
text = "76854 Jumps"
align = 1
clip_text = true

[node name="Falls" type="Label" parent="End Screen/HBoxContainer/Player1"]
margin_top = 271.0
margin_right = 177.0
margin_bottom = 306.0
size_flags_horizontal = 13
text = "475 Falls"
align = 1
clip_text = true

[node name="HSeparator3" type="HSeparator" parent="End Screen/HBoxContainer/Player1"]
margin_top = 310.0
margin_right = 177.0
margin_bottom = 332.0
custom_styles/separator = SubResource( 8 )
custom_constants/separation = 22

[node name="VSeparator" type="VSeparator" parent="End Screen/HBoxContainer/Player1"]
margin_top = 336.0
margin_right = 177.0
margin_bottom = 339.0
custom_styles/separator = SubResource( 9 )
custom_constants/separation = 177

[node name="Press A" type="Control" parent="End Screen/HBoxContainer/Player1"]
margin_top = 343.0
margin_right = 177.0
margin_bottom = 343.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="Sprite" parent="End Screen/HBoxContainer/Player1/Press A"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 180, 10 )

[node name="Player2" type="VBoxContainer" parent="End Screen/HBoxContainer"]
visible = false
margin_right = 177.0
margin_bottom = 343.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="End Screen/HBoxContainer/Player2"]
margin_right = 177.0
alignment = 1

[node name="Control" type="Control" parent="End Screen/HBoxContainer/Player2/HBoxContainer"]
margin_left = 88.0
margin_right = 88.0

[node name="Sprite" type="Sprite" parent="End Screen/HBoxContainer/Player2/HBoxContainer/Control"]
self_modulate = Color( 0, 1, 0.4, 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, 115 )

[node name="Panel" type="Panel" parent="End Screen/HBoxContainer/Player2/HBoxContainer/Control/Sprite"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -105.0
margin_top = 40.0
margin_right = 26.0
margin_bottom = 298.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Winner" type="Label" parent="End Screen/HBoxContainer/Player2"]
margin_top = 4.0
margin_right = 177.0
margin_bottom = 39.0
text = "Winner!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="End Screen/HBoxContainer/Player2"]
margin_top = 43.0
margin_right = 177.0
margin_bottom = 183.0
custom_styles/separator = SubResource( 7 )
custom_constants/separation = 140

[node name="Time" type="Label" parent="End Screen/HBoxContainer/Player2"]
margin_top = 187.0
margin_right = 177.0
margin_bottom = 222.0
text = "0:06:56"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="End Screen/HBoxContainer/Player2"]
margin_top = 226.0
margin_right = 177.0
margin_bottom = 228.0
custom_styles/separator = SubResource( 8 )
custom_constants/separation = 2

[node name="Jumps" type="Label" parent="End Screen/HBoxContainer/Player2"]
margin_top = 232.0
margin_right = 177.0
margin_bottom = 267.0
text = "76854 Jumps"
align = 1
clip_text = true

[node name="Falls" type="Label" parent="End Screen/HBoxContainer/Player2"]
margin_top = 271.0
margin_right = 177.0
margin_bottom = 306.0
size_flags_horizontal = 13
text = "475 Falls"
align = 1
clip_text = true

[node name="HSeparator3" type="HSeparator" parent="End Screen/HBoxContainer/Player2"]
margin_top = 310.0
margin_right = 177.0
margin_bottom = 332.0
custom_styles/separator = SubResource( 8 )
custom_constants/separation = 22

[node name="VSeparator" type="VSeparator" parent="End Screen/HBoxContainer/Player2"]
margin_top = 336.0
margin_right = 177.0
margin_bottom = 339.0
custom_styles/separator = SubResource( 9 )
custom_constants/separation = 177

[node name="Press A" type="Control" parent="End Screen/HBoxContainer/Player2"]
margin_top = 343.0
margin_right = 177.0
margin_bottom = 343.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="Sprite" parent="End Screen/HBoxContainer/Player2/Press A"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 180, 10 )

[node name="Player3" type="VBoxContainer" parent="End Screen/HBoxContainer"]
visible = false
margin_right = 177.0
margin_bottom = 343.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="End Screen/HBoxContainer/Player3"]
margin_right = 177.0
alignment = 1

[node name="Control" type="Control" parent="End Screen/HBoxContainer/Player3/HBoxContainer"]
margin_left = 88.0
margin_right = 88.0

[node name="Sprite" type="Sprite" parent="End Screen/HBoxContainer/Player3/HBoxContainer/Control"]
self_modulate = Color( 0.784314, 0, 1, 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, 115 )

[node name="Panel" type="Panel" parent="End Screen/HBoxContainer/Player3/HBoxContainer/Control/Sprite"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -105.0
margin_top = 40.0
margin_right = 26.0
margin_bottom = 298.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Winner" type="Label" parent="End Screen/HBoxContainer/Player3"]
margin_top = 4.0
margin_right = 177.0
margin_bottom = 39.0
text = "Winner!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="End Screen/HBoxContainer/Player3"]
margin_top = 43.0
margin_right = 177.0
margin_bottom = 183.0
custom_styles/separator = SubResource( 7 )
custom_constants/separation = 140

[node name="Time" type="Label" parent="End Screen/HBoxContainer/Player3"]
margin_top = 187.0
margin_right = 177.0
margin_bottom = 222.0
text = "0:06:56"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="End Screen/HBoxContainer/Player3"]
margin_top = 226.0
margin_right = 177.0
margin_bottom = 228.0
custom_styles/separator = SubResource( 8 )
custom_constants/separation = 2

[node name="Jumps" type="Label" parent="End Screen/HBoxContainer/Player3"]
margin_top = 232.0
margin_right = 177.0
margin_bottom = 267.0
text = "76854 Jumps"
align = 1
clip_text = true

[node name="Falls" type="Label" parent="End Screen/HBoxContainer/Player3"]
margin_top = 271.0
margin_right = 177.0
margin_bottom = 306.0
size_flags_horizontal = 13
text = "475 Falls"
align = 1
clip_text = true

[node name="HSeparator3" type="HSeparator" parent="End Screen/HBoxContainer/Player3"]
margin_top = 310.0
margin_right = 177.0
margin_bottom = 332.0
custom_styles/separator = SubResource( 8 )
custom_constants/separation = 22

[node name="VSeparator" type="VSeparator" parent="End Screen/HBoxContainer/Player3"]
margin_top = 336.0
margin_right = 177.0
margin_bottom = 339.0
custom_styles/separator = SubResource( 9 )
custom_constants/separation = 177

[node name="Press A" type="Control" parent="End Screen/HBoxContainer/Player3"]
margin_top = 343.0
margin_right = 177.0
margin_bottom = 343.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="Sprite" parent="End Screen/HBoxContainer/Player3/Press A"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 180, 10 )

[node name="Player4" type="VBoxContainer" parent="End Screen/HBoxContainer"]
visible = false
margin_right = 177.0
margin_bottom = 343.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="End Screen/HBoxContainer/Player4"]
margin_right = 177.0
alignment = 1

[node name="Control" type="Control" parent="End Screen/HBoxContainer/Player4/HBoxContainer"]
margin_left = 88.0
margin_right = 88.0

[node name="Sprite" type="Sprite" parent="End Screen/HBoxContainer/Player4/HBoxContainer/Control"]
self_modulate = Color( 0.733333, 1, 0, 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, 115 )

[node name="Panel" type="Panel" parent="End Screen/HBoxContainer/Player4/HBoxContainer/Control/Sprite"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -105.0
margin_top = 40.0
margin_right = 26.0
margin_bottom = 298.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Winner" type="Label" parent="End Screen/HBoxContainer/Player4"]
margin_top = 4.0
margin_right = 177.0
margin_bottom = 39.0
text = "Winner!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="End Screen/HBoxContainer/Player4"]
margin_top = 43.0
margin_right = 177.0
margin_bottom = 183.0
custom_styles/separator = SubResource( 7 )
custom_constants/separation = 140

[node name="Time" type="Label" parent="End Screen/HBoxContainer/Player4"]
margin_top = 187.0
margin_right = 177.0
margin_bottom = 222.0
text = "0:06:56"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="End Screen/HBoxContainer/Player4"]
margin_top = 226.0
margin_right = 177.0
margin_bottom = 228.0
custom_styles/separator = SubResource( 8 )
custom_constants/separation = 2

[node name="Jumps" type="Label" parent="End Screen/HBoxContainer/Player4"]
margin_top = 232.0
margin_right = 177.0
margin_bottom = 267.0
text = "76854 Jumps"
align = 1
clip_text = true

[node name="Falls" type="Label" parent="End Screen/HBoxContainer/Player4"]
margin_top = 271.0
margin_right = 177.0
margin_bottom = 306.0
size_flags_horizontal = 13
text = "475 Falls"
align = 1
clip_text = true

[node name="HSeparator3" type="HSeparator" parent="End Screen/HBoxContainer/Player4"]
margin_top = 310.0
margin_right = 177.0
margin_bottom = 332.0
custom_styles/separator = SubResource( 8 )
custom_constants/separation = 22

[node name="VSeparator" type="VSeparator" parent="End Screen/HBoxContainer/Player4"]
margin_top = 336.0
margin_right = 177.0
margin_bottom = 339.0
custom_styles/separator = SubResource( 9 )
custom_constants/separation = 177

[node name="Press A" type="Control" parent="End Screen/HBoxContainer/Player4"]
margin_top = 343.0
margin_right = 177.0
margin_bottom = 343.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="Sprite" parent="End Screen/HBoxContainer/Player4/Press A"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 180, 10 )

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Panel/Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
